[package]
name = "valixdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
io-block = "0.2.2"
libc = "0.2.151"
indicatif = "0.17.7"
console = "0.15.7"
anyhow = "1.0.78"
